// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div
  class="sc-bxivhb glCqXO"
>
  <h3
    class="sc-ifAKCX lfULYF"
  >
    Edit name
  </h3>
  <input
    value=""
  />
  <div
    class="sc-htpNat cixthU"
  >
    <button
      class="sc-bdVaJa dWNBmp"
    >
      Delete
    </button>
    <button
      class="sc-bdVaJa dnqbXl"
    >
      Cancel
    </button>
    <button
      class="sc-bdVaJa bNhLRi"
    >
      Change name
    </button>
  </div>
</div>
`;

exports[`snapshot 2`] = `
<div
  class="sc-bxivhb glCqXO"
>
  <h3
    class="sc-ifAKCX lfULYF"
  >
    Edit name
  </h3>
  <input
    value="(◍•ᴗ•◍)"
  />
  <div
    class="sc-htpNat cixthU"
  >
    <button
      class="sc-bdVaJa dWNBmp"
    >
      Delete
    </button>
    <button
      class="sc-bdVaJa dnqbXl"
    >
      Cancel
    </button>
    <button
      class="sc-bdVaJa bNhLRi"
    >
      Change name
    </button>
  </div>
</div>
`;
